# Qwen3ASR.rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.sh
docs/performance/: qwen3-asr-cuda-graph-raw-audios-bottleneck-notes.md  qwen3-asr-metal-isq8-optimization-notes.md  qwen3-asr-metal-prefill-optimization-status.md
docs/superpowers/plans/: 2026-05-31-qwen3-asr-paged-attention.md  2026-05-31-qwen3-asr-python-package.md
docs/superpowers/specs/: 2026-05-31-qwen3-asr-paged-attention-design.md  2026-05-31-qwen3-asr-python-package-design.md  2026-06-03-vasr-data-timeline-annotation-design.md
python/qwen3_asr_rs/: __init__.py
qwen3_asr_core/: Cargo.toml
qwen3_asr_core/src/: device.rs  lib.rs  model.rs  stream.rs  transcribe.rs
qwen3_asr_py/: Cargo.toml
qwen3_asr_py/src/: lib.rs
qwen3_asr_runtime/: Cargo.toml
qwen3_asr_runtime/examples/: bench_transcribe.rs
qwen3_asr_runtime/src/: lib.rs
qwen3_asr_runtime/src/inference/: streaming.rs  transcribe.rs  utils.rs
qwen3_asr_runtime/src/model/: attention.rs  audio_encoder.rs  generation.rs  isq_linear.rs  kv_cache.rs  mod.rs  paged_kv_cache.rs  thinker.rs  thinker_text.rs  weights.rs
qwen3_asr_runtime/src/model/rope/: mrope.rs
scripts/: bench_transcribe_http.py
tests/: test_python_api.py
vasr-audio/: Cargo.toml
vasr-cli/: Cargo.toml
vasr-cli/examples/: bench_transcribe_dir.rs  bench_transcribe_stages.rs
vasr-cli/src/: lib.rs  run.rs  serve.rs
vasr-data/: Cargo.toml
vasr-data/src/: extract_audio.rs  fasr_audio_list.rs  lib.rs  media.rs  record.rs  segment.rs  timeline.rs  waveform.rs
vasr-data/tests/: data_behaviour.rs
vasr-models/: Cargo.toml
vasr-models/examples/: bench_text_decode.rs  bench_transcribe.rs  bench_transcribe_batch.rs  bench_transcribe_wall.rs
vasr-models/src/: download.rs  lib.rs
vasr-models/src/audio/: decode.rs
vasr-models/src/forced_aligner/: model.rs
vasr-models/src/inference/: batch_scheduler.rs  transcribe.rs  utils.rs
vasr-models/src/model/: attention.rs  audio_encoder.rs  generation.rs  kv_cache.rs  mod.rs  paged_batch_engine.rs  paged_cache_runtime.rs  paged_kv_cache.rs  q8_mmvq.rs  thinker.rs  thinker_text.rs  weights.rs
vasr-models/src/model/rope/: mrope.rs  scaling.rs
vasr-models/src/processor/: asr_processor.rs  feature_extractor.rs  tokenizer.rs
vasr-paged-attn/: Cargo.toml  build.rs
vasr-paged-attn/src/: cuda_graph.rs  decode_forward.rs  flash.rs  lib.rs  paged_cache_runtime.rs  paged_kv_cache.rs
vasr-paged-attn/src/metal/: mod.rs  varlen_prefill.rs
vasr-paged-attn/src/metal/kernels/: mod.rs  prefill_paged_attn.metal
vasr-protocol/: Cargo.toml
vasr-protocol/src/: lib.rs
vasr-protocol/tests/: transcribe_protocol.rs
vasr-quant/: Cargo.toml  build.rs
vasr-quant/src/: isq_linear.rs  lib.rs
vasr-realtime/: Cargo.toml
vasr-realtime/src/: lib.rs  protocol.rs  serve.rs  server.rs
vasr-runtime/: Cargo.toml
vasr-runtime/src/: device.rs  lib.rs  scheduler.rs
vasr-runtime/src/model/: mod.rs
vasr-runtime/src/models/: e2e_vad.rs  mod.rs  qwen3_asr.rs  vad.rs
vasr-runtime/src/pipeline/: async.rs  mod.rs
vasr-runtime/tests/: async_pipeline_behaviour.rs  pipeline_behaviour.rs
vasr-runtime/tests/fixtures/: fsmn_vad_fasr_segments.json
vasr-server/: Cargo.toml
vasr-server/src/: async_transcribe.rs  realtime.rs
vasr-transcribe/: Cargo.toml
vasr-transcribe/src/: benchmark.rs  extract_audio.rs  lib.rs  pipeline.rs  protocol.rs  run.rs  serve.rs  server.rs
vasr_audio/: Cargo.toml
vasr_audio/src/: lib.rs
vasr_cli/: Cargo.toml
vasr_cli/examples/: bench_transcribe_dir.rs  bench_transcribe_stages.rs
vasr_cli/src/: benchmark.rs  convert_fasr.rs  main.rs  serve.rs
vasr_data/: Cargo.toml
vasr_data/src/: lib.rs  record.rs  stream.rs  timeline.rs  waveform.rs
vasr_data/tests/: data_behaviour.rs
vasr_models/: Cargo.toml
vasr_models/examples/: bench_transcribe.rs  bench_transcribe_batch.rs  bench_transcribe_wall.rs
vasr_models/src/: lib.rs
vasr_models/src/inference/: mod.rs  transcribe.rs  types.rs
vasr_models/src/model/: attention.rs  audio_encoder.rs  cuda_graph.rs  generation.rs  isq_linear.rs  kv_cache.rs  metal_argmax.rs  mod.rs  paged_cache_runtime.rs  paged_kv_cache.rs  thinker.rs  thinker_text.rs  weights.rs
vasr_models/src/model/rope/: mrope.rs
vasr_models/src/processor/: asr_processor.rs  feature_extractor.rs  tokenizer.rs
vasr_models_qwen3_asr/: Cargo.toml
vasr_models_qwen3_asr/examples/: bench_transcribe.rs  bench_transcribe_wall.rs
vasr_models_qwen3_asr/src/audio/: decode.rs  resample.rs
vasr_models_qwen3_asr/src/forced_aligner/: mod.rs  model.rs  processor.rs
vasr_models_qwen3_asr/src/forced_aligner/assets/: japanese_merge_terms_default.txt
vasr_models_qwen3_asr/src/inference/: streaming.rs  types.rs
vasr_models_qwen3_asr/src/model/: cuda_graph.rs  mod.rs  paged_kv_cache.rs  q8_mmvq.rs  thinker.rs  weights.rs
vasr_models_qwen3_asr/src/model/rope/: core.rs  mod.rs  standard.rs
vasr_models_qwen3_asr/src/processor/: tokenizer.rs
vasr_protocol/: Cargo.toml
vasr_protocol/src/: transcribe.rs
vasr_runtime/: Cargo.toml
vasr_runtime/src/: lib.rs
vasr_runtime/src/model/: mod.rs
vasr_runtime/src/models/: e2e_vad.rs  mod.rs  qwen3_asr.rs  vad.rs
vasr_runtime/src/pipeline/: async.rs  mod.rs
vasr_runtime/tests/: pipeline_behaviour.rs
vasr_server/: Cargo.toml
vasr_server/src/: async_transcribe.rs  lib.rs  realtime.rs  scheduler.rs  transcribe.rs
