[workspace]
members = [
  "vasr-models",
  "vasr-audio",
  "vasr-data",
  "vasr-runtime",
  "vasr-transcribe",
  "vasr-realtime",
  "vasr-paged-attn",
  "vasr-quant",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wangmengdi/Qwen3ASR.rs"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
