[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "qwen3-asr-rs"
version = "0.1.0"
description = "Python bindings for Qwen3-ASR inference using Rust and Candle"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Qwen3ASR.rs contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.maturin]
manifest-path = "qwen3_asr_py/Cargo.toml"
module-name = "qwen3_asr_rs._native"
python-source = "python"
features = ["pyo3/extension-module"]
