[package]
name = "qwen3_asr_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
candle-core = { version = "0.9" }
qwen3_asr_runtime = { path = "../qwen3_asr_runtime", features = ["audio-loading"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
cuda = ["candle-core/cuda", "qwen3_asr_runtime/cuda"]
metal = ["candle-core/metal", "qwen3_asr_runtime/metal"]
