[package]
name = "qwen3_asr_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "15b70c7" }
qwen3_asr_runtime = { path = "../qwen3_asr_runtime", features = ["audio-loading"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
cuda = ["candle-core/cuda", "qwen3_asr_runtime/cuda"]
metal = ["candle-core/metal", "qwen3_asr_runtime/metal"]
metal-paged-attn = ["candle-core/metal", "qwen3_asr_runtime/metal-paged-attn"]
