[package]
name = "vasr-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "2"
unicode-general-category = "1.1.0"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
