[package]
name = "vasr-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qwen3-ASR speech recognition model implementation for Candle"
categories = ["science"]
keywords = ["asr", "speech-recognition", "machine-learning", "qwen"]

[dependencies]
candle-core = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348" }
candle-nn = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348" }
candle-transformers = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348" }
candle-flash-attn = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348", optional = true }
float8 = "0.7"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

tokenizers = "0.23"
modelscope = "0.1"
tokio = { version = "1", features = ["rt"] }
safetensors = "0.7"
bytemuck = { version = "1", features = ["derive"] }
rustfft = "6"
rayon = "1"

accelerate-src = { version = "0.3.2", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
cudarc = { version = "0.19.0", optional = true }
half = { version = "2.5.0", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }

vasr-paged-attn = { path = "../vasr-paged-attn", default-features = false }
vasr-quant = { path = "../vasr-quant", default-features = false }

symphonia = { version = "0.6", features = ["all-codecs", "all-formats"], optional = true }
rubato = { version = "3", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"], optional = true }
lindera = { version = "2.2.0", optional = true }
lindera-ipadic = { version = "2.2.0", optional = true }
unicode-general-category = "1.1.0"
unicode-normalization = "0.1"

[features]
default = []

accelerate = [
  "dep:accelerate-src",
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
cuda = ["cuda-base", "cuda-graph"]
cuda-base = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
  "dep:half",
  "vasr-quant/cuda",
]
cuda-graph = ["cuda-paged-attn", "vasr-paged-attn/cuda-graph"]
cuda-quant = ["cuda-base", "vasr-quant/cuda-quant"]
cudnn = ["cuda-base", "candle-core/cudnn"]
flash-attn = ["cuda-base", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = [
  "dep:intel-mkl-src",
  "candle-core/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
nccl = ["cuda-base", "cudarc/nccl", "dep:half"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "vasr-quant/metal"]
paged-attn = ["vasr-paged-attn/paged-attn", "vasr-quant/paged-attn"]
metal-paged-attn = [
  "metal",
  "paged-attn",
  "vasr-paged-attn/metal-paged-attn",
  "vasr-quant/metal-paged-attn",
]
cuda-paged-attn = [
  "cuda-base",
  "paged-attn",
  "vasr-paged-attn/cuda-paged-attn",
  "vasr-quant/cuda-paged-attn",
]
cudarc = ["dep:cudarc"]

audio-loading = ["dep:symphonia", "dep:rubato", "dep:base64", "dep:reqwest"]

forced-aligner = [
  "dep:lindera",
  "dep:lindera-ipadic",
  "lindera/embed-ipadic",
  "lindera-ipadic/embed-ipadic",
]

integration-tests = []
timing = ["vasr-quant/timing"]

test-all = ["integration-tests"]
test-all-macos = ["test-all", "metal", "audio-loading"]
test-all-cuda = ["test-all", "cuda", "audio-loading"]

[dev-dependencies]
fs2 = "0.4"

[[example]]
name = "bench_transcribe"
required-features = ["audio-loading", "timing"]

[[example]]
name = "bench_transcribe_wall"
required-features = ["audio-loading"]

[[example]]
name = "bench_transcribe_batch"
required-features = ["audio-loading", "timing"]

[[example]]
name = "bench_text_decode"
required-features = ["timing"]
