[package]
name = "vasr-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
candle-core = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348" }
candle-nn = { git = "https://gitee.com/good-as-water/candle.git", version = "0.10.2", rev = "5404348" }
modelscope = "0.1"
kaldi-fbank-rust-kautism = "0.1.0"
ndarray = "0.17"
rayon = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
vasr-models = { path = "../vasr-models" }
vasr-data = { path = "../vasr-data" }

[features]
default = []
async = []
accelerate = ["vasr-models/accelerate"]
cuda-vad = ["candle-core/cuda", "candle-nn/cuda"]
cuda = ["cuda-vad", "vasr-models/cuda"]
cuda-graph = ["cuda", "vasr-models/cuda-graph"]
cuda-quant = ["cuda", "vasr-models/cuda-quant"]
flash-attn = ["cuda", "vasr-models/flash-attn"]
metal = ["vasr-models/metal-paged-attn"]
metal-paged-attn = ["metal"]
cuda-paged-attn = ["cuda"]
audio-loading = ["vasr-models/audio-loading"]
timing = ["vasr-models/timing"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
