[package]
name = "vasr-transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vasr-transcribe"
path = "src/bin/vasr_transcribe.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2", rev = "5404348" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt", "time"] }
vasr-audio = { path = "../vasr-audio" }
vasr-data = { path = "../vasr-data" }
vasr-models = { path = "../vasr-models" }
uuid = "1"
vasr-runtime = { path = "../vasr-runtime", features = ["async"] }

[features]
default = []
accelerate = ["vasr-runtime/accelerate"]
cuda = ["vasr-runtime/cuda", "vasr-runtime/cuda-graph", "vasr-runtime/flash-attn", "vasr-runtime/cuda-quant", "vasr-runtime/timing"]
metal = ["vasr-runtime/metal", "vasr-runtime/timing"]

[lints]
workspace = true
