[package]
name = "vasr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
vasr-audio = { path = "../vasr_audio" }
vasr-data = { path = "../vasr_data" }
vasr-protocol = { path = "../vasr_protocol" }
vasr-runtime = { path = "../vasr_runtime" }

[lints]
workspace = true
